--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="b-description__item col-lg-4 col-sm-6 col-xs-12">
             <div class="b-description__logo b-description__logo2"></div>
-            <h2 class="b-description__title">Функциональность</h2>
+            <h2 class="b-description__title">Красота</h2>
             <p class="b-description__caption">В наборе 64 буквы, из<br>которых можно<br>составлять целые<br> предложения</p>
         </div>
         <div class="b-description__item col-lg-4 col-sm-6 col-xs-12">
