--- a/index.html
+++ b/index.html
@@ -337,13 +337,12 @@
 </section>
 <footer class="b-footer">
     <div class="l-container">
-        <p>Сайт создан студией <a href="#">Alien</a> 2016</p>
+        <p>Сайт создан студией <a href="#">Kodc</a> 2016</p>
     </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.js"></script>
-<!--<script src="js/jquery.matchHeight.js"></script>-->
 <script src="js/main.js"></script>
 </body>
 </html>
